--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	},
 	"main": "index.js",
 	"dependencies": {
-		"lodash": "^3.9.3"
+		"lodash": "^3.9.3",
+		"eventemitter2": "^0.4.14"
 	},
 	"peerDependencies": {
 		"react": ">=0.13.0",
